--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.PokedexActivity">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPokemonList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/pokemon_item" />
+        tools:listitem="@layout/item_pokemon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
